RESOLVED FIXED96987
DFGOperations doesn't use NativeCallFrameTracer in enough places
https://bugs.webkit.org/show_bug.cgi?id=96987
Summary DFGOperations doesn't use NativeCallFrameTracer in enough places
Filip Pizlo
Reported 2012-09-18 00:43:02 PDT
Anything that may GC should use it.
Attachments
the patch (5.66 KB, patch)
2012-09-18 00:46 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2012-09-18 00:46:31 PDT
Created attachment 164508 [details] the patch
Mark Hahnenberg
Comment 2 2012-09-18 08:16:52 PDT
r=me
WebKit Review Bot
Comment 3 2012-09-18 08:22:06 PDT
Comment on attachment 164508 [details] the patch Clearing flags on attachment: 164508 Committed r128898: <http://trac.webkit.org/changeset/128898>
WebKit Review Bot
Comment 4 2012-09-18 08:22:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.