DFGOperations doesn't use NativeCallFrameTracer in enough places https://bugs.webkit.org/show_bug.cgi?id=96987

Reviewed by Mark Hahnenberg.

Anything that can GC should use it.

* dfg/DFGOperations.cpp:


Canonical link: https://commits.webkit.org/114964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128898 268f45cc-cd09-0410-ab3c-d52691b4dbfc